# ModBot

./: .gitignore  CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.md  dpp.deb  reset
.cache/clangd/index/: main.cpp.E917E283C288AF02.idx
cmake/: FindDPP.cmake  FindPROTOBUF.cmake  FindSQLITE.cmake
src/: constants.h  daily.h  db.cpp  db.h  embedTest.cpp  league.cpp  league.h  main.cpp  progress.pb.cc  progress.pb.h  progress.proto  sql.cpp  sql.h
src/commands/: command_listener.cpp  command_listener.h
src/league/: league.cpp
src/pubg/: pubg.cpp  pubg.h
